--- a/manifest.json
+++ b/manifest.json
@@ -9,5 +9,9 @@
     "default_popup": "popup/popup.html"
   },
 
+  "web_accessible_resources": [
+    "fontawesome/fonts/*"
+  ],
+
   "permissions": ["tabs", "<all_urls>"]
 }
